AP-6906: fixed problem with non-used field
AP-6906 (Usability of Call Workflow Nodes with Respect to Input and
Output Parameters)